# multi-modal-ai

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.sh  test_basic_structure.py  test_functionality.py  test_model_working.py  test_multimodal.py  test_quick_validation.py  test_structure.py
notebooks/: 01_multimodal_ai_tutorial.ipynb
src/: __init__.py  config.py
src/api/: __init__.py  main.py  schemas.py
src/data/: __init__.py  augmentations.py  loaders.py  preprocessors.py
src/models/: __init__.py  ensemble.py  fusion.py  image_encoder.py  tabular_encoder.py  text_encoder.py
src/training/: __init__.py
